For Win32 added BUILD_MFC_EXAMPLE option, default to OFF to try and avoid issues with users without MFC installed. --This line, and

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -14,114 +14,125 @@ SET(TARGET_COMMON_LIBRARIES
 	osgText 
 )
 
-ADD_SUBDIRECTORY(osganimate)
-ADD_SUBDIRECTORY(osgautotransform)
-ADD_SUBDIRECTORY(osgbillboard)
-ADD_SUBDIRECTORY(osgblendequation)
-ADD_SUBDIRECTORY(osgcallback)
-ADD_SUBDIRECTORY(osgcamera)
-ADD_SUBDIRECTORY(osgcatch)
-ADD_SUBDIRECTORY(osgclip)
-ADD_SUBDIRECTORY(osgcopy)
-ADD_SUBDIRECTORY(osgcompositeviewer)
-ADD_SUBDIRECTORY(osgcubemap)
-ADD_SUBDIRECTORY(osgdelaunay)
-ADD_SUBDIRECTORY(osgdepthpartition)
-ADD_SUBDIRECTORY(osgdepthshadow)
-ADD_SUBDIRECTORY(osgdistortion)
-ADD_SUBDIRECTORY(osgfadetext)
-ADD_SUBDIRECTORY(osgforest)
-ADD_SUBDIRECTORY(osgfxbrowser)
-ADD_SUBDIRECTORY(osggeodemo)
-ADD_SUBDIRECTORY(osggeometry)
-ADD_SUBDIRECTORY(osghangglide)
-ADD_SUBDIRECTORY(osghud)
-ADD_SUBDIRECTORY(osgimpostor)
-ADD_SUBDIRECTORY(osgintersection)
-ADD_SUBDIRECTORY(osgkeyboard)
-ADD_SUBDIRECTORY(osgkeyboardmouse)
-ADD_SUBDIRECTORY(osglauncher)
-ADD_SUBDIRECTORY(osglight)
-ADD_SUBDIRECTORY(osglightpoint)
-ADD_SUBDIRECTORY(osglogicop)
-ADD_SUBDIRECTORY(osglogo)
-ADD_SUBDIRECTORY(osgmanipulator)
-ADD_SUBDIRECTORY(osgmotionblur)
-ADD_SUBDIRECTORY(osgmovie)
-ADD_SUBDIRECTORY(osgmultitexture)
-ADD_SUBDIRECTORY(osgoccluder)
-ADD_SUBDIRECTORY(osgpagedlod)
-ADD_SUBDIRECTORY(osgparametric)
-ADD_SUBDIRECTORY(osgparticle)
-ADD_SUBDIRECTORY(osgparticleeffects)
-ADD_SUBDIRECTORY(osgphotoalbum)
-ADD_SUBDIRECTORY(osgpick)
-ADD_SUBDIRECTORY(osgplanets)
-ADD_SUBDIRECTORY(osgpoints)
-ADD_SUBDIRECTORY(osgpointsprite)
-ADD_SUBDIRECTORY(osgprecipitation)
-ADD_SUBDIRECTORY(osgprerender)
-ADD_SUBDIRECTORY(osgprerendercubemap)
-ADD_SUBDIRECTORY(osgreflect)
-ADD_SUBDIRECTORY(osgscalarbar)
-ADD_SUBDIRECTORY(osgscribe)
-ADD_SUBDIRECTORY(osgsequence)
-ADD_SUBDIRECTORY(osgshaders)
-ADD_SUBDIRECTORY(osgshaderterrain)
-ADD_SUBDIRECTORY(osgshadowtexture)
-ADD_SUBDIRECTORY(osgshadow)
-ADD_SUBDIRECTORY(osgshape)
-ADD_SUBDIRECTORY(osgsimplifier)
-ADD_SUBDIRECTORY(osgsimulation)
-ADD_SUBDIRECTORY(osgterrain)
-ADD_SUBDIRECTORY(osgslice)
-ADD_SUBDIRECTORY(osgspacewarp)
-ADD_SUBDIRECTORY(osgspheresegment)
-ADD_SUBDIRECTORY(osgspotlight)
-ADD_SUBDIRECTORY(osgstereoimage)
-ADD_SUBDIRECTORY(osgteapot)
-ADD_SUBDIRECTORY(osgtessellate)#)
-ADD_SUBDIRECTORY(osgtext)
-ADD_SUBDIRECTORY(osgtexture1D)
-ADD_SUBDIRECTORY(osgtexture2D)
-ADD_SUBDIRECTORY(osgtexture3D)
-ADD_SUBDIRECTORY(osgtexturerectangle)
-ADD_SUBDIRECTORY(osgunittests)
-ADD_SUBDIRECTORY(osgvertexprogram)
-ADD_SUBDIRECTORY(osgvolume)
-ADD_SUBDIRECTORY(osgwindows)
+IF(DYNAMIC_OPENSCENEGRAPH)
 
-IF   (BUILD_OSG_WRAPPERS)
-    ADD_SUBDIRECTORY(osgintrospection)
-ENDIF(BUILD_OSG_WRAPPERS)
+    ADD_SUBDIRECTORY(osganimate)
+    ADD_SUBDIRECTORY(osgautotransform)
+    ADD_SUBDIRECTORY(osgbillboard)
+    ADD_SUBDIRECTORY(osgblendequation)
+    ADD_SUBDIRECTORY(osgcallback)
+    ADD_SUBDIRECTORY(osgcamera)
+    ADD_SUBDIRECTORY(osgcatch)
+    ADD_SUBDIRECTORY(osgclip)
+    ADD_SUBDIRECTORY(osgcopy)
+    ADD_SUBDIRECTORY(osgcompositeviewer)
+    ADD_SUBDIRECTORY(osgcubemap)
+    ADD_SUBDIRECTORY(osgdelaunay)
+    ADD_SUBDIRECTORY(osgdepthpartition)
+    ADD_SUBDIRECTORY(osgdepthshadow)
+    ADD_SUBDIRECTORY(osgdistortion)
+    ADD_SUBDIRECTORY(osgfadetext)
+    ADD_SUBDIRECTORY(osgforest)
+    ADD_SUBDIRECTORY(osgfxbrowser)
+    ADD_SUBDIRECTORY(osggeodemo)
+    ADD_SUBDIRECTORY(osggeometry)
+    ADD_SUBDIRECTORY(osghangglide)
+    ADD_SUBDIRECTORY(osghud)
+    ADD_SUBDIRECTORY(osgimpostor)
+    ADD_SUBDIRECTORY(osgintersection)
+    ADD_SUBDIRECTORY(osgkeyboard)
+    ADD_SUBDIRECTORY(osgkeyboardmouse)
+    ADD_SUBDIRECTORY(osglauncher)
+    ADD_SUBDIRECTORY(osglight)
+    ADD_SUBDIRECTORY(osglightpoint)
+    ADD_SUBDIRECTORY(osglogicop)
+    ADD_SUBDIRECTORY(osglogo)
+    ADD_SUBDIRECTORY(osgmanipulator)
+    ADD_SUBDIRECTORY(osgmotionblur)
+    ADD_SUBDIRECTORY(osgmovie)
+    ADD_SUBDIRECTORY(osgmultitexture)
+    ADD_SUBDIRECTORY(osgoccluder)
+    ADD_SUBDIRECTORY(osgpagedlod)
+    ADD_SUBDIRECTORY(osgparametric)
+    ADD_SUBDIRECTORY(osgparticle)
+    ADD_SUBDIRECTORY(osgparticleeffects)
+    ADD_SUBDIRECTORY(osgphotoalbum)
+    ADD_SUBDIRECTORY(osgpick)
+    ADD_SUBDIRECTORY(osgplanets)
+    ADD_SUBDIRECTORY(osgpoints)
+    ADD_SUBDIRECTORY(osgpointsprite)
+    ADD_SUBDIRECTORY(osgprecipitation)
+    ADD_SUBDIRECTORY(osgprerender)
+    ADD_SUBDIRECTORY(osgprerendercubemap)
+    ADD_SUBDIRECTORY(osgreflect)
+    ADD_SUBDIRECTORY(osgscalarbar)
+    ADD_SUBDIRECTORY(osgscribe)
+    ADD_SUBDIRECTORY(osgsequence)
+    ADD_SUBDIRECTORY(osgshaders)
+    ADD_SUBDIRECTORY(osgshaderterrain)
+    ADD_SUBDIRECTORY(osgshadowtexture)
+    ADD_SUBDIRECTORY(osgshadow)
+    ADD_SUBDIRECTORY(osgshape)
+    ADD_SUBDIRECTORY(osgsimplifier)
+    ADD_SUBDIRECTORY(osgsimulation)
+    ADD_SUBDIRECTORY(osgterrain)
+    ADD_SUBDIRECTORY(osgslice)
+    ADD_SUBDIRECTORY(osgspacewarp)
+    ADD_SUBDIRECTORY(osgspheresegment)
+    ADD_SUBDIRECTORY(osgspotlight)
+    ADD_SUBDIRECTORY(osgstereoimage)
+    ADD_SUBDIRECTORY(osgteapot)
+    ADD_SUBDIRECTORY(osgtessellate)#)
+    ADD_SUBDIRECTORY(osgtext)
+    ADD_SUBDIRECTORY(osgtexture1D)
+    ADD_SUBDIRECTORY(osgtexture2D)
+    ADD_SUBDIRECTORY(osgtexture3D)
+    ADD_SUBDIRECTORY(osgtexturerectangle)
+    ADD_SUBDIRECTORY(osgunittests)
+    ADD_SUBDIRECTORY(osgvertexprogram)
+    ADD_SUBDIRECTORY(osgvolume)
+    ADD_SUBDIRECTORY(osgwindows)
 
-IF   (GLUT_FOUND)
-    ADD_SUBDIRECTORY(osgviewerGLUT)
-ENDIF(GLUT_FOUND)
+    IF   (BUILD_OSG_WRAPPERS)
+        ADD_SUBDIRECTORY(osgintrospection)
+    ENDIF(BUILD_OSG_WRAPPERS)
 
-IF   (SDL_FOUND)
-    ADD_SUBDIRECTORY(osgviewerSDL)
-ENDIF(SDL_FOUND)
+    IF   (GLUT_FOUND)
+        ADD_SUBDIRECTORY(osgviewerGLUT)
+    ENDIF(GLUT_FOUND)
 
-IF   (wxWidgets_FOUND)
-    ADD_SUBDIRECTORY(osgviewerWX)
-ENDIF(wxWidgets_FOUND)
+    IF   (SDL_FOUND)
+        ADD_SUBDIRECTORY(osgviewerSDL)
+    ENDIF(SDL_FOUND)
 
-IF   (QT_FOUND)
-    ADD_SUBDIRECTORY(osgviewerQT)
-ENDIF(QT_FOUND)
+    IF   (wxWidgets_FOUND)
+        ADD_SUBDIRECTORY(osgviewerWX)
+    ENDIF(wxWidgets_FOUND)
 
-IF   (FLTK_FOUND)
-    ADD_SUBDIRECTORY(osgviewerFLTK)
-ENDIF(FLTK_FOUND)
+    IF   (QT_FOUND)
+        ADD_SUBDIRECTORY(osgviewerQT)
+    ENDIF(QT_FOUND)
 
-IF   (WIN32)
-    ADD_SUBDIRECTORY(osgviewerMFC)
-ENDIF(WIN32)
+    IF   (FLTK_FOUND)
+        ADD_SUBDIRECTORY(osgviewerFLTK)
+    ENDIF(FLTK_FOUND)
 
-IF   (NOT DYNAMIC_OPENSCENEGRAPH)
+    IF   (WIN32)
+
+        OPTION(BUILD_MFC_EXAMPLE "Enable the build of the MFC Example" OFF)
+
+        IF   (BUILD_MFC_EXAMPLE)        
+            ADD_SUBDIRECTORY(osgviewerMFC)
+        ENDIF(BUILD_MFC_EXAMPLE)
+
+    ENDIF(WIN32)
+
+    #ADD_SUBDIRECTORY(osgcegui)
+    #to add subject to find socket#ADD_SUBDIRECTORY(osgcluster)
+
+ELSE(DYNAMIC_OPENSCENEGRAPH)
+
     ADD_SUBDIRECTORY(osgstaticviewer)
-ENDIF(NOT DYNAMIC_OPENSCENEGRAPH)
+    
+ENDIF(DYNAMIC_OPENSCENEGRAPH)
 
-#ADD_SUBDIRECTORY(osgcegui)
-#to add subject to find socket#ADD_SUBDIRECTORY(osgcluster)
