--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -141,6 +141,7 @@ FIND_PACKAGE(FreeType)
 FIND_PACKAGE(FLTK)
 FIND_PACKAGE(GLUT)
 FIND_PACKAGE(SDL)
+FIND_PACKAGE(FOX)
 FIND_PACKAGE(Inventor)
 FIND_PACKAGE(Jasper)
 FIND_PACKAGE(COLLADA)
