Re-introduced GDAL plugin.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -149,6 +149,7 @@ FIND_PACKAGE(Xine)
 FIND_PACKAGE(OpenVRML)
 FIND_PACKAGE(Performer)
 FIND_PACKAGE(ZLIB)
+FIND_PACKAGE(GDAL)
 
 # SET(DESIRED_QT_VERSION 3)
 # FIND_PACKAGE(Qt)
