Added preliminary shell of osgTerrain plugin

--- a/src/osgPlugins/CMakeLists.txt
+++ b/src/osgPlugins/CMakeLists.txt
@@ -33,6 +33,7 @@ ADD_SUBDIRECTORY(osgSim)
 ADD_SUBDIRECTORY(osgText)
 ADD_SUBDIRECTORY(osgViewer)
 ADD_SUBDIRECTORY(osgShadow)
+ADD_SUBDIRECTORY(osgTerrain)
 ADD_SUBDIRECTORY(osga)
 ADD_SUBDIRECTORY(rot)
 ADD_SUBDIRECTORY(scale)
