--- a/src/osgPlugins/CMakeLists.txt
+++ b/src/osgPlugins/CMakeLists.txt
@@ -7,7 +7,9 @@
 PROJECT(OSG_PLUGINS_MASTER)
 
 
-SET(LIBRARY_OUTPUT_PATH "${LIBRARY_OUTPUT_PATH}/${OSG_PLUGINS}")
+IF(NOT MSVC)
+	SET(LIBRARY_OUTPUT_PATH "${LIBRARY_OUTPUT_PATH}/${OSG_PLUGINS}")
+ENDIF(NOT MSVC)
 
 IF(NOT MINGW)
 	SET(CMAKE_SHARED_MODULE_PREFIX "")
