Added osgdepthpeeling example

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -29,6 +29,7 @@ IF(DYNAMIC_OPENSCENEGRAPH)
     ADD_SUBDIRECTORY(osgcubemap)
     ADD_SUBDIRECTORY(osgdelaunay)
     ADD_SUBDIRECTORY(osgdepthpartition)
+    ADD_SUBDIRECTORY(osgdepthpeeling)
     ADD_SUBDIRECTORY(osgdistortion)
     ADD_SUBDIRECTORY(osgfadetext)
     ADD_SUBDIRECTORY(osgforest)
