Maded versioning under Windows the default.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -107,23 +107,23 @@ IF(WIN32)
 # the second option disable incremental linking in debug build , that is enabled by default by CMake
 ##########################################################################################################
 
-	IF(MSVC)
-		IF(${CMAKE_MAJOR_VERSION} EQUAL 2 AND ${CMAKE_MINOR_VERSION} EQUAL 4 AND ${CMAKE_PATCH_VERSION} LESS 7)
-			MESSAGE("Warning:  disabling versioned options 2.4.6 exibits inconsintencies in .pdb naming, at least under MSVC, suggested upgrading at least to 2.4.7")
-			SET(OSG_MSVC_VERSIONED_DLL OFF)
-			SET(OSG_MSVC_DEBUG_INCREMENTAL_LINK ON)
-		ELSE(${CMAKE_MAJOR_VERSION} EQUAL 2 AND ${CMAKE_MINOR_VERSION} EQUAL 4 AND ${CMAKE_PATCH_VERSION} LESS 7)
-    	OPTION(OSG_MSVC_VERSIONED_DLL "Set to ON to build OpenSceneGraph with versioned dll names" OFF)
-			MARK_AS_ADVANCED(OSG_MSVC_VERSIONED_DLL)
-    	OPTION(OSG_MSVC_DEBUG_INCREMENTAL_LINK "Set to OFF to build OpenSceneGraph without incremental linking in debug (release is off by default)" ON)
-			MARK_AS_ADVANCED(OSG_MSVC_DEBUG_INCREMENTAL_LINK)
-			IF(NOT OSG_MSVC_DEBUG_INCREMENTAL_LINK)
-    		SET(CMAKE_MODULE_LINKER_FLAGS_DEBUG "/debug /INCREMENTAL:NO")
-    		SET(CMAKE_SHARED_LINKER_FLAGS_DEBUG "/debug /INCREMENTAL:NO")
-    		SET(CMAKE_EXE_LINKER_FLAGS_DEBUG "/debug /INCREMENTAL:NO")
-			ENDIF(NOT OSG_MSVC_DEBUG_INCREMENTAL_LINK)
-		ENDIF(${CMAKE_MAJOR_VERSION} EQUAL 2 AND ${CMAKE_MINOR_VERSION} EQUAL 4 AND ${CMAKE_PATCH_VERSION} LESS 7)
-	ENDIF(MSVC)
+    IF(MSVC)
+        IF(${CMAKE_MAJOR_VERSION} EQUAL 2 AND ${CMAKE_MINOR_VERSION} EQUAL 4 AND ${CMAKE_PATCH_VERSION} LESS 7)
+            MESSAGE("Warning:  disabling versioned options 2.4.6 exibits inconsintencies in .pdb naming, at least under MSVC, suggested upgrading at least to 2.4.7")
+            SET(OSG_MSVC_VERSIONED_DLL OFF)
+            SET(OSG_MSVC_DEBUG_INCREMENTAL_LINK ON)
+        ELSE(${CMAKE_MAJOR_VERSION} EQUAL 2 AND ${CMAKE_MINOR_VERSION} EQUAL 4 AND ${CMAKE_PATCH_VERSION} LESS 7)
+            OPTION(OSG_MSVC_VERSIONED_DLL "Set to ON to build OpenSceneGraph with versioned dll names" ON)
+            MARK_AS_ADVANCED(OSG_MSVC_VERSIONED_DLL)
+            OPTION(OSG_MSVC_DEBUG_INCREMENTAL_LINK "Set to OFF to build OpenSceneGraph without incremental linking in debug (release is off by default)" ON)
+            MARK_AS_ADVANCED(OSG_MSVC_DEBUG_INCREMENTAL_LINK)
+            IF(NOT OSG_MSVC_DEBUG_INCREMENTAL_LINK)
+                SET(CMAKE_MODULE_LINKER_FLAGS_DEBUG "/debug /INCREMENTAL:NO")
+                SET(CMAKE_SHARED_LINKER_FLAGS_DEBUG "/debug /INCREMENTAL:NO")
+                SET(CMAKE_EXE_LINKER_FLAGS_DEBUG "/debug /INCREMENTAL:NO")
+            ENDIF(NOT OSG_MSVC_DEBUG_INCREMENTAL_LINK)
+        ENDIF(${CMAKE_MAJOR_VERSION} EQUAL 2 AND ${CMAKE_MINOR_VERSION} EQUAL 4 AND ${CMAKE_PATCH_VERSION} LESS 7)
+    ENDIF(MSVC)
 ENDIF(WIN32)
 
 ########################################################################################################
