Introduced a OSG_PLUGIN_PREFIX variable into CMake build system with it set to "" for all platforms except Cygwin where its set to "cygwin_" and Mingw where it is set to "mingw_".  Updated osgDB::Registry to look for these for the plugins. Updated the osgintrospection example to search for these names as well.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,17 @@ SET(OPENSCENEGRAPH_VERSION ${OPENSCENEGRAPH_MAJOR_VERSION}.${OPENSCENEGRAPH_MINO
 
 SET(OSG_PLUGINS osgPlugins-${OPENSCENEGRAPH_VERSION})
 
+SET(OSG_PLUGIN_PREFIX "")
+
+IF (CYGWIN)
+    SET(OSG_PLUGIN_PREFIX "cygwin_")
+ENDIF(CYGWIN)
+
+IF(MINGW)
+    SET(OSG_PLUGIN_PREFIX "mingw_")
+ENDIF(MINGW)
+
+
 # We want to build SONAMES shared librariess
 SET(OPENSCENEGRAPH_SONAMES TRUE)
 SET(OPENTHREADS_SONAMES TRUE)
@@ -86,6 +97,9 @@ INCLUDE_DIRECTORIES(
 # Common global definitions
 #ADD_DEFINITIONS(-D)
 # Platform specific definitions
+
+
+
 
 IF(WIN32)
     ADD_DEFINITIONS(-D_SCL_SECURE_NO_WARNINGS)
