--- a/src/osgPlugins/CMakeLists.txt
+++ b/src/osgPlugins/CMakeLists.txt
@@ -11,15 +11,13 @@ IF(NOT MSVC)
     SET(LIBRARY_OUTPUT_PATH "${LIBRARY_OUTPUT_PATH}/${OSG_PLUGINS}")
 ENDIF(NOT MSVC)
 
-IF(NOT MINGW)
-    SET(CMAKE_SHARED_MODULE_PREFIX "")
-ENDIF(NOT MINGW)
+SET(CMAKE_SHARED_MODULE_PREFIX ${OSG_PLUGIN_PREFIX})
 
 
 SET(TARGET_DEFAULT_PREFIX "osgdb_")
 SET(TARGET_DEFAULT_LABEL_PREFIX "Plugins")
 SET(TARGET_COMMON_LIBRARIES 
-        OpenThreads
+    OpenThreads
     osg 
     osgDB 
     osgUtil
