Added GLU_TESS_CALLBACK_TRIPLEDOT path into include/osg/GLU and enabled this for AIX as reading the old paths this was required.  This looks like it is needed under Xcode build as well.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -99,7 +99,9 @@ INCLUDE_DIRECTORIES(
 # Platform specific definitions
 
 
-
+IF   (CMAKE_SYSTEM MATCHES "AIX.*")
+    ADD_DEFINITIONS(-DGLU_TESS_CALLBACK_TRIPLEDOT)
+ENDIF(CMAKE_SYSTEM MATCHES "AIX.*")
 
 IF(WIN32)
     ADD_DEFINITIONS(-D_SCL_SECURE_NO_WARNINGS)
