--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -98,10 +98,26 @@ INCLUDE_DIRECTORIES(
 #ADD_DEFINITIONS(-D)
 # Platform specific definitions
 
+IF(NOT DEFAULT_GLU_TESS_CALLBACK_TRIPLEDOT)
 
-IF   (CMAKE_SYSTEM MATCHES "AIX.*")
+    SET(DEFAULT_GLU_TESS_CALLBACK_TRIPLEDOT OFF)
+
+    IF   (CMAKE_SYSTEM MATCHES "AIX.*")
+        SET(DEFAULT_GLU_TESS_CALLBACK_TRIPLEDOT ON)
+    ENDIF(CMAKE_SYSTEM MATCHES "AIX.*")
+
+    IF   (APPLE)
+        SET(DEFAULT_GLU_TESS_CALLBACK_TRIPLEDOT ON)
+    ENDIF(APPLE)
+    
+ENDIF(NOT DEFAULT_GLU_TESS_CALLBACK_TRIPLEDOT)
+
+OPTION(OSG_GLU_TESS_CALLBACK_TRIPLEDOT "Set to ON to build build with (...) version of GLU tesselator callback" ${DEFAULT_GLU_TESS_CALLBACK_TRIPLEDOT})
+
+IF   (OSG_GLU_TESS_CALLBACK_TRIPLEDOT)
     ADD_DEFINITIONS(-DGLU_TESS_CALLBACK_TRIPLEDOT)
-ENDIF(CMAKE_SYSTEM MATCHES "AIX.*")
+ENDIF(OSG_GLU_TESS_CALLBACK_TRIPLEDOT)
+
 
 IF(WIN32)
     ADD_DEFINITIONS(-D_SCL_SECURE_NO_WARNINGS)
