From Cedric Pinson, first cut at Producer .cfg camera configuration file support.

--- a/src/osgPlugins/CMakeLists.txt
+++ b/src/osgPlugins/CMakeLists.txt
@@ -48,6 +48,12 @@ ADD_SUBDIRECTORY(net)
 ADD_SUBDIRECTORY(osg)
 ADD_SUBDIRECTORY(ive)
 
+############################################################
+#
+#  Viewer plugins
+#
+ADD_SUBDIRECTORY(cfg)
+
 
 ############################################################
 #
