From David Callu, added support of 3D text to osgText and associated plugins.

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -83,6 +83,7 @@ IF(DYNAMIC_OPENSCENEGRAPH)
     ADD_SUBDIRECTORY(osgteapot)
     ADD_SUBDIRECTORY(osgtessellate)#)
     ADD_SUBDIRECTORY(osgtext)
+    ADD_SUBDIRECTORY(osgtext3D)
     ADD_SUBDIRECTORY(osgtexture1D)
     ADD_SUBDIRECTORY(osgtexture2D)
     ADD_SUBDIRECTORY(osgtexture3D)
