--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -78,6 +78,7 @@ IF(DYNAMIC_OPENSCENEGRAPH)
     ADD_SUBDIRECTORY(osgslice)
     ADD_SUBDIRECTORY(osgspacewarp)
     ADD_SUBDIRECTORY(osgspheresegment)
+    ADD_SUBDIRECTORY(osgsharedarray)
     ADD_SUBDIRECTORY(osgspotlight)
     ADD_SUBDIRECTORY(osgstereoimage)
     ADD_SUBDIRECTORY(osgteapot)
