From Serge Lages, "Here is a new modification to CMake adding an option (OSG_MSVC_GENERATE_PLUGINS_AND_WRAPPERS_MANIFESTS) to specify if we want to generate or not the manifest files under VS8 for the plugins and the wrappers. It seems that the manifests are needed if we try to load dynamically a core OSG dll."

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -26,3 +26,8 @@ IF   (BUILD_OSG_WRAPPERS)
     ADD_SUBDIRECTORY(osgIntrospection)
     ADD_SUBDIRECTORY(osgWrappers)
 ENDIF(BUILD_OSG_WRAPPERS)
+
+IF(MSVC80)
+  OPTION(OSG_MSVC_GENERATE_PLUGINS_AND_WRAPPERS_MANIFESTS "Generate or not manifests files under VS8 for dynamically loaded dlls" ON)
+ENDIF(MSVC80)
+
