--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -52,6 +52,7 @@ IF(DYNAMIC_OPENSCENEGRAPH)
     ADD_SUBDIRECTORY(osgmovie)
     ADD_SUBDIRECTORY(osgmultitexture)
     ADD_SUBDIRECTORY(osgoccluder)
+    ADD_SUBDIRECTORY(osgocclusionquery)
     ADD_SUBDIRECTORY(osgpagedlod)
     ADD_SUBDIRECTORY(osgparametric)
     ADD_SUBDIRECTORY(osgparticle)
