--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -70,6 +70,7 @@ IF(DYNAMIC_OPENSCENEGRAPH)
     ADD_SUBDIRECTORY(osgscribe)
     ADD_SUBDIRECTORY(osgsequence)
     ADD_SUBDIRECTORY(osgshaders)
+    ADD_SUBDIRECTORY(osggeometryshaders)
     ADD_SUBDIRECTORY(osgshaderterrain)
     ADD_SUBDIRECTORY(osgshadow)
     ADD_SUBDIRECTORY(osgshape)
