From Cedric Pinson, "you can find as attachement a readerwriter for ogr files (.tab, .gml, .shp ...) ogr is a part of gdal so i added the build of ogr plugin if gdal is found.
to test it
osgviewerd -e ogr file.tab
or
osgviewerd -e ogr file.gml
or
osgviewerd -e ogr file.shp
"

--- a/src/osgPlugins/CMakeLists.txt
+++ b/src/osgPlugins/CMakeLists.txt
@@ -88,6 +88,7 @@ IF(TIFF_FOUND)
 ENDIF(TIFF_FOUND)
 IF(GDAL_FOUND)
     ADD_SUBDIRECTORY(gdal)
+    ADD_SUBDIRECTORY(ogr)
 ENDIF(GDAL_FOUND)
 
 ############################################################
