Fixed BUILD_REF_DOCS_SEARCHENGINE conditional

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -462,11 +462,11 @@ OPTION(BUILD_DOCUMENTATION "Build osg documentation" OFF)
 IF(BUILD_DOCUMENTATION)
     SET(BUILD_DOCUMENTATION YES)
 
-    IF(BUILD_REF_DOCS)
+    IF(BUILD_REF_DOCS_SEARCHENGINE)
         SET(SEARCHENGINE YES)
-    ELSE(BUILD_REF_DOCS)
+    ELSE(BUILD_REF_DOCS_SEARCHENGINE)
         SET(SEARCHENGINE NO)
-    ENDIF(BUILD_REF_DOCS)
+    ENDIF(BUILD_REF_DOCS_SEARCHENGINE)
     
     IF(BUILD_REF_DOCS_TAGFILE)
         SET(GENERATE_TAGFILE "doc/OpenSceneGraphReferenceDocs/osg.tag")
