Disabled the build of plugins that aren't supported under GLES.

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -59,7 +59,6 @@ IF(DYNAMIC_OPENSCENEGRAPH)
     ADD_SUBDIRECTORY(osglogo)
     ADD_SUBDIRECTORY(osgmanipulator)
     ADD_SUBDIRECTORY(osgmemorytest)
-    ADD_SUBDIRECTORY(osgmotionblur)
     ADD_SUBDIRECTORY(osgmovie)
     ADD_SUBDIRECTORY(osgmultiplerendertargets)
     ADD_SUBDIRECTORY(osgmultitexture)
@@ -81,7 +80,6 @@ IF(DYNAMIC_OPENSCENEGRAPH)
     ADD_SUBDIRECTORY(osgreflect)
     ADD_SUBDIRECTORY(osgrobot)
     ADD_SUBDIRECTORY(osgscalarbar)
-    ADD_SUBDIRECTORY(osgscreencapture)
     ADD_SUBDIRECTORY(osgscribe)
     ADD_SUBDIRECTORY(osgsequence)
     ADD_SUBDIRECTORY(osgshaders)
@@ -139,6 +137,11 @@ IF(DYNAMIC_OPENSCENEGRAPH)
     ADD_SUBDIRECTORY(osgwidgetstyled)
     ADD_SUBDIRECTORY(osgwidgettable)
     ADD_SUBDIRECTORY(osgwidgetwindow)
+
+IF(NOT OSG_GLES2_AVAILABLE AND NOT OSG_GLES2_AVAILABLE)
+    ADD_SUBDIRECTORY(osgscreencapture)
+    ADD_SUBDIRECTORY(osgmotionblur)
+ENDIF()
 
 IF(OSG_GLU_AVAILABLE)
     ADD_SUBDIRECTORY(osgphotoalbum)
